tests/invalid/MethodCall_Invalid_8.whiley
function f() -> int:
    &int x = new 1
    return 1
